--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
+		<java.version>1.8</java.version>
 	</properties>	
 	<dependencies>
 		<dependency>
